--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+    "@syncfusion/ej2-angular-charts": "^18.3.35",
     "angular-fusioncharts": "^3.0.4",
     "apexcharts": "^3.22.0",
     "fusioncharts": "^3.15.3",
