--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
-    "@syncfusion/ej2-angular-charts": "^18.3.35",
+    "@d3fc/d3fc-technical-indicator": "^8.0.1",
     "angular-fusioncharts": "^3.0.4",
-    "apexcharts": "^3.22.0",
     "fusioncharts": "^3.15.3",
-    "ng-apexcharts": "^1.5.4",
     "ngx-csv-parser": "0.0.6",
     "rxjs": "~6.5.5",
+    "ta-math": "^1.0.26",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
