--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [
-
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -121,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "backtest-trading"
+    }
+  },
+  "defaultProject": "backtest-trading",
+  "cli": {
+    "analytics": false
+  }
 }
