--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@angular/router": "~10.0.9",
     "@d3fc/d3fc-technical-indicator": "^8.0.1",
     "angular-fusioncharts": "^3.0.4",
+    "d3-array": "^2.8.0",
     "fusioncharts": "^3.15.3",
     "ngx-csv-parser": "0.0.6",
     "rxjs": "~6.5.5",
-    "ta-math": "^1.0.26",
     "tslib": "^2.0.0",
+    "tulind": "^0.8.18",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
