--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@angular/common": "~10.0.9",
     "@angular/compiler": "~10.0.9",
     "@angular/core": "~10.0.9",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~10.0.9",
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
     "@d3fc/d3fc-technical-indicator": "^8.0.1",
     "angular-fusioncharts": "^3.0.4",
+    "firebase": "^7.24.0",
     "fusioncharts": "^3.15.3",
     "ngx-csv-parser": "0.0.6",
     "rxjs": "~6.5.5",
